--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#about">About us</a></li>
           <li><a href="#objective">Objective</a></li>
           <li><a href="#motivation">Motivation</a></li>
           <li><a href="#corpus">Corpus</a></li>
