--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About us</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#objective">Objective</a></li>
           <li><a href="#motivation">Motivation</a></li>
           <li><a href="#corpus">Corpus</a></li>
@@ -728,7 +728,7 @@ available for Indian languages.
         <div class="row gy-4">
           <p style="text-align: justify;">
 
-            A leaderboard is a platform or framework used to benchmark and compare the
+            A <b>leaderboard</b> is a platform or framework used to benchmark and compare the
 performance of different models and algorithms on specific natural language processing
 tasks. In this case, the leaderboard compares the performance of Machine Translation
 systems for Indian Languages.
