--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@ available for Indian languages.
 
 
     <!-- LEADERBOARD Section -->
-    <section id="contact" class="contact section light-background">
+    <section id="ldboard" class="contact section light-background">
 
       <!-- Section Title -->
       <div class="container section-title">
